@@ -85,6 +85,7 @@ class Mailtemplates extends DataModel
 			'joomlaupdate_found' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_JOOMLAUPDATE_FOUND',
 			'joomlaupdate_will_install' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_JOOMLAUPDATE_WILL_INSTALL',
 			'joomlaupdate_installed' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_JOOMLAUPDATE_INSTALLED',
+			'joomlaupdate_failed' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_JOOMLAUPDATE_FAILED',
 			'extension_update_found' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_EXTENSION_UPDATE_FOUND',
 			'extensions_update_done' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_EXTENSIONS_UPDATE_DONE',
 			'akeebabackup_success' => 'PANOPTICON_MAILTEMPLATES_OPT_TYPE_AKEEBABACKUP_SUCCESS',
