@@ -221,7 +221,7 @@ INSERT INTO `#__mailtemplates`
 (`type`,`language`,`subject`,`html`,`plaintext`) VALUES 
 ('joomlaupdate_failed','*','🚨 Unable to upgrade “[SITE_NAME]” to Joomla!™ [NEW_VERSION]','<div class=\"akemail-outer-wrapper\">\r\n<table>\r\n<tbody>\r\n<tr>\r\n<td width=\"10%\">&nbsp;</td>\r\n<td>\r\n<div class=\"akemail-wrapper\">\r\n<div class=\"akemail-container\"><!-- Logo Header -->\r\n<div class=\"akemail-logo\"><a href=\"[URL]\">&nbsp;<img src=\"[URL]/media/images/logo_bw.svg\" alt=\"Panopticon &mdash; Site Monitoring\">&nbsp;</a></div>\r\n<!-- Hello -->\r\n<div class=\"akemail-hello\">\r\n<p>Hello,</p>\r\n</div>\r\n<!-- Main-Topic -->\r\n<div class=\"akemail-main-topic\">\r\n<p>Unable to upgrade &ldquo;[SITE_NAME]&rdquo; to Joomla!&trade; [NEW_VERSION]</p>\r\n</div>\r\n<!-- Message -->\r\n<div class=\"akemail-message\">\r\n<p>Panopticon was unable to install the new Joomla! version [NEW_VERSION] on your site &ldquo;<a href=\"[SITE_URL]\">[SITE_NAME]</a>&rdquo;. The error received is as follows:</p>\r\n<p>[MESSAGE]</p>\r\n</div>\r\n<!-- Area Offer/Announcement -->\r\n<div class=\"akemail-announcement\">\r\n<div class=\"akemail-announcement-box\">\r\n<h3>Action required</h3>\r\n<p>The new version will <strong>NOT</strong> be installed automatically. You will have to install it yourself.</p>\r\n</div>\r\n<p class=\"akemail-announcement-visitlink\">You can install the new Joomla! version either from your site\'s administrator page, or through the main control panel of <a href=\"[URL]\">your Akeeba Panopticon installation</a>.</p>\r\n</div>\r\n<!-- Bye, Bye -->\r\n<div class=\"akemail-outro\">\r\n<p>Have a great day!</p>\r\n</div>\r\n<!-- Footer -->\r\n<div class=\"akemail-footer\">\r\n<p class=\"akemail-footer-sitelink\">&nbsp;<a href=\"[URL]\">Panopticon &mdash; Site Monitoring</a></p>\r\n</div>\r\n</div>\r\n<!-- Legal info -->\r\n<div class=\"akemail-legalinfo\">\r\n<p>This is an automated email. Please do not reply to it.</p>\r\n</div>\r\n</div>\r\n</td>\r\n<td width=\"10%\">&nbsp;</td>\r\n</tr>\r\n</tbody>\r\n</table>\r\n</div>','Hello,\r\n\r\n\r\nUnable to upgrade “[SITE_NAME]” to Joomla!™ [NEW_VERSION]\r\n\r\n\r\nPanopticon was unable to install the new Joomla! version [NEW_VERSION] on \r\nyour site “[SITE_NAME]”. The error received is as follows:\r\n\r\n\r\n[MESSAGE]\r\n\r\n\r\n==============================================================================\r\n! ! ! ! !  ACTION REQUIRED  ! ! ! ! !\r\n==============================================================================\r\n\r\nThe new version will NOT be installed automatically. You will have to\r\ninstall it yourself.\r\n\r\n==============================================================================\r\n\r\n\r\nYou can install the new Joomla! version either from your site\'s\r\nadministrator page, or through the main control panel of your Akeeba\r\nPanopticon installation ([URL]).\r\n\r\nHave a great day!\r\n\r\n------------------------------------------------------------------------------\r\n\r\nThis email was sent by the Panopticon installation on [URL].\r\nThis is an automated email. Please do not reply to it.');
 ]]></query>
-        <query><![CDATA[
+            <query><![CDATA[
 INSERT INTO `#__mailtemplates` (`type`, `language`, `subject`, `html`, `plaintext`) VALUES ('akeebabackup_success', '*', 'Successful backup on “[SITE_NAME]”', '<div class="akemail-outer-wrapper">
 <table>
 <tbody>
@@ -282,7 +282,7 @@ Have a great day!
 This email was sent by the Panopticon installation on [URL]
 This is an automated email. Please do not reply to it.')
 ]]></query>
-        <query><![CDATA[
+            <query><![CDATA[
 INSERT INTO `#__mailtemplates` (`type`, `language`, `subject`, `html`, `plaintext`) VALUES ('akeebabackup_fail', '*', 'Failed backup on “[SITE_NAME]”', '<div class="akemail-outer-wrapper">
             <table>
                 <tbody>
@@ -353,7 +353,7 @@ SELECT COUNT(*) FROM `#__mailtemplates` WHERE `type` = 'extensions_update_done';
 INSERT INTO panopticon.pnptc_mailtemplates (type, language, subject, html, plaintext) VALUES ('extensions_update_done', '*', 'Automatic extension updates on [SITE_NAME]', '<div class="akemail-outer-wrapper">\n<table>\n<tbody>\n<tr>\n<td width="10%">&nbsp;</td>\n<td>\n<div class="akemail-wrapper">\n<div class="akemail-container"><!-- Logo Header -->\n<div class="akemail-logo"><a href="[URL]">&nbsp;<img src="[URL]/media/images/logo_bw.svg" alt="Panopticon &mdash; Site Monitoring">&nbsp;</a></div>\n<!-- Hello -->\n<div class="akemail-hello">\n<p>Hello,</p>\n</div>\n[RENDERED_HTML] <!-- Bye, Bye -->\n<div class="akemail-outro">\n<p>Have a great day!</p>\n</div>\n<!-- Footer -->\n<div class="akemail-footer">\n<p class="akemail-footer-sitelink">&nbsp;<a href="[URL]">Panopticon &mdash; Site Monitoring</a></p>\n</div>\n</div>\n<!-- Legal info -->\n<div class="akemail-legalinfo">\n<p>This is an automated email. Please do not reply to it.</p>\n</div>\n</div>\n</td>\n<td width="10%">&nbsp;</td>\n</tr>\n</tbody>\n</table>\n</div>', 'Hello,\n\n\n[RENDERED_TEXT]\n\n\nHave a great day!\n\n------------------------------------------------------------------------------\n\nThis email was sent by the Panopticon installation on [URL]\nThis is an automated email. Please do not reply to it.')
 ]]></query>
             <query><![CDATA[
-INSERT INTO panopticon.pnptc_mailtemplates (type, language, subject, html, plaintext) VALUES ('extension_update_found', '*', '? [EXTENSION_NAME] [NEW_VERSION] is available for installation on “[SITE_NAME]”', '<div class="akemail-outer-wrapper">\n<table>\n<tbody>\n<tr>\n<td width="10%">&nbsp;</td>\n<td>\n<div class="akemail-wrapper">\n<div class="akemail-container"><!-- Logo Header -->\n<div class="akemail-logo"><a href="[URL]">&nbsp;<img src="[URL]/media/images/logo_bw.svg" alt="Panopticon &mdash; Site Monitoring">&nbsp;</a></div>\n<!-- Hello -->\n<div class="akemail-hello">\n<p>Hello,</p>\n</div>\n<!-- Main-Topic -->\n<div class="akemail-main-topic">\n<p>[EXTENSION_NAME] [NEW_VERSION] is available on &ldquo;[SITE_NAME]&rdquo;</p>\n</div>\n<!-- Message -->\n<div class="akemail-message">\n<p>[EXTENSION_NAME] version [NEW_VERSION] is now available for installation on your site &ldquo;<a href="[SITE_URL]">[SITE_NAME]</a>&rdquo;. Your site is currently running the older version [OLD_VERSION].</p>\n</div>\n<!-- Area Offer/Announcement -->\n<div class="akemail-announcement">\n<div class="akemail-announcement-box">\n<h3>Action required</h3>\n<p>The new version will <strong>NOT</strong> be installed automatically. You will have to install it yourself.</p>\n</div>\n<p class="akemail-announcement-note"><em>Note</em>: Akeeba Panopticon can be configured to install new versions of [EXTENSION_NAME] automatically.</p>\n<p class="akemail-announcement-visitlink">You can install the new [EXTENSION_NAME] version either from your site\'s administrator page, or through the main control panel of <a href="[URL]">your Akeeba Panopticon installation</a>.</p>\n</div>\n<!-- Bye, Bye -->\n<div class="akemail-outro">\n<p>Have a great day!</p>\n</div>\n<!-- Footer -->\n<div class="akemail-footer">\n<p class="akemail-footer-sitelink">&nbsp;<a href="[URL]">Panopticon &mdash; Site Monitoring</a></p>\n</div>\n</div>\n<!-- Legal info -->\n<div class="akemail-legalinfo">\n<p>This is an automated email. Please do not reply to it.</p>\n</div>\n</div>\n</td>\n<td width="10%">&nbsp;</td>\n</tr>\n</tbody>\n</table>\n</div>', 'Hello,\n\n\n[EXTENSION_NAME] [NEW_VERSION] is available on “[SITE_NAME]”\n\n\n[EXTENSION_NAME] version [NEW_VERSION] is now available for installation on\nyour site “[SITE_NAME] [SITE_URL]”. Your site is currently\nrunning the older version [OLD_VERSION].\n\n\n==============================================================================\n! ! ! ! !  ACTION REQUIRED  ! ! ! ! !\n==============================================================================\n\nThe new version will NOT be installed automatically. You will have to\ninstall it yourself.\n\n~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n\nNote: Akeeba Panopticon can be configured to install new versions of\n[EXTENSION_NAME] automatically.\n\n==============================================================================\n\n\nYou can install the new [EXTENSION_NAME] version either from\nyour site\'s administrator page, or through the main control panel of your\nAkeeba Panopticon installation ([URL]).\n\nHave a great day!\n\n------------------------------------------------------------------------------\n\nThis email was sent by the Panopticon installation on [URL].\nThis is an automated email. Please do not reply to it.\n')
+INSERT INTO panopticon.pnptc_mailtemplates (type, language, subject, html, plaintext) VALUES ('extension_update_found', '*', '⚠️ [EXTENSION_NAME] [NEW_VERSION] is available for installation on “[SITE_NAME]”', '<div class="akemail-outer-wrapper">\n<table>\n<tbody>\n<tr>\n<td width="10%">&nbsp;</td>\n<td>\n<div class="akemail-wrapper">\n<div class="akemail-container"><!-- Logo Header -->\n<div class="akemail-logo"><a href="[URL]">&nbsp;<img src="[URL]/media/images/logo_bw.svg" alt="Panopticon &mdash; Site Monitoring">&nbsp;</a></div>\n<!-- Hello -->\n<div class="akemail-hello">\n<p>Hello,</p>\n</div>\n<!-- Main-Topic -->\n<div class="akemail-main-topic">\n<p>[EXTENSION_NAME] [NEW_VERSION] is available on &ldquo;[SITE_NAME]&rdquo;</p>\n</div>\n<!-- Message -->\n<div class="akemail-message">\n<p>[EXTENSION_NAME] version [NEW_VERSION] is now available for installation on your site &ldquo;<a href="[SITE_URL]">[SITE_NAME]</a>&rdquo;. Your site is currently running the older version [OLD_VERSION].</p>\n</div>\n<!-- Area Offer/Announcement -->\n<div class="akemail-announcement">\n<div class="akemail-announcement-box">\n<h3>Action required</h3>\n<p>The new version will <strong>NOT</strong> be installed automatically. You will have to install it yourself.</p>\n</div>\n<p class="akemail-announcement-note"><em>Note</em>: Akeeba Panopticon can be configured to install new versions of [EXTENSION_NAME] automatically.</p>\n<p class="akemail-announcement-visitlink">You can install the new [EXTENSION_NAME] version either from your site\'s administrator page, or through the main control panel of <a href="[URL]">your Akeeba Panopticon installation</a>.</p>\n</div>\n<!-- Bye, Bye -->\n<div class="akemail-outro">\n<p>Have a great day!</p>\n</div>\n<!-- Footer -->\n<div class="akemail-footer">\n<p class="akemail-footer-sitelink">&nbsp;<a href="[URL]">Panopticon &mdash; Site Monitoring</a></p>\n</div>\n</div>\n<!-- Legal info -->\n<div class="akemail-legalinfo">\n<p>This is an automated email. Please do not reply to it.</p>\n</div>\n</div>\n</td>\n<td width="10%">&nbsp;</td>\n</tr>\n</tbody>\n</table>\n</div>', 'Hello,\n\n\n[EXTENSION_NAME] [NEW_VERSION] is available on “[SITE_NAME]”\n\n\n[EXTENSION_NAME] version [NEW_VERSION] is now available for installation on\nyour site “[SITE_NAME] [SITE_URL]”. Your site is currently\nrunning the older version [OLD_VERSION].\n\n\n==============================================================================\n! ! ! ! !  ACTION REQUIRED  ! ! ! ! !\n==============================================================================\n\nThe new version will NOT be installed automatically. You will have to\ninstall it yourself.\n\n~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n\nNote: Akeeba Panopticon can be configured to install new versions of\n[EXTENSION_NAME] automatically.\n\n==============================================================================\n\n\nYou can install the new [EXTENSION_NAME] version either from\nyour site\'s administrator page, or through the main control panel of your\nAkeeba Panopticon installation ([URL]).\n\nHave a great day!\n\n------------------------------------------------------------------------------\n\nThis email was sent by the Panopticon installation on [URL].\nThis is an automated email. Please do not reply to it.\n')
 ]]></query>
         </action>
 
